Finalize upgrading.